--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.12",
     "styled-components": "^4.3.2"
